--- a/app/src/main/res/layout/activity_main_list.xml
+++ b/app/src/main/res/layout/activity_main_list.xml
@@ -9,7 +9,7 @@
     <ListView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:id="@+id/listView"
+        android:id="@+id/listView12"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:dividerHeight="1dp" />
