--- a/app/src/main/res/layout/custlist.xml
+++ b/app/src/main/res/layout/custlist.xml
@@ -16,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="title"
-        android:id="@+id/Title"
+        android:id="@+id/Title1"
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/imageView"
         android:textStyle="bold"
