--- a/app/src/main/res/layout/custlist.xml
+++ b/app/src/main/res/layout/custlist.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView"
+        android:id="@+id/imv1"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:src="@drawable/ic_launcher" />
@@ -20,7 +20,7 @@
         android:text="title"
         android:id="@+id/Title1"
         android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/imageView"
+        android:layout_toEndOf="@+id/imv1"
         android:textStyle="bold"
         android:typeface="sans"
         android:textSize="20dp" />
@@ -31,6 +31,6 @@
         android:text="Address"
         android:id="@+id/addr"
         android:textSize="15sp"
-        android:layout_alignBottom="@+id/imageView"
-        android:layout_toEndOf="@+id/imageView" />
+        android:layout_alignBottom="@+id/imv1"
+        android:layout_toEndOf="@+id/imv1" />
 </RelativeLayout>
