--- a/app/src/main/res/layout/activity_drage_view.xml
+++ b/app/src/main/res/layout/activity_drage_view.xml
@@ -12,6 +12,8 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="124dp"
+        android:elevation="2dp"
+
         android:src="@drawable/ic_launcher" />
 
 </RelativeLayout>
